# hproj

./: .gitignore  API_SPECIFICATION.md  CONFIGURATION_GUIDE.md  DATABASE_SCHEMA.md  DEMO_SCRIPT.md  DEVELOPMENT_SETUP.md  Deep-Dive-Intelligence-Report.md  GITHUB_SETUP.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_ROADMAP.md  PLAN_TO_WIN.md  README.md  SMART_CONTRACTS_SPEC.md  Treasury-Agent-Business-Plan.docx  Treasury-Agent-Demo.html  Treasury-Agent-Financial-Model.xlsx  Treasury-Agent-Pitch-Deck.pptx  Treasury-Agent-Technical-Spec.docx  docker-compose.yml  index.html
.github/workflows/: ci.yml  deploy.yml
assets/: index-60RRVWGM.js  index-Bk9ioEIh.css  index-CqK-QVSU.js  index-D3GI1UMj.css  index-DKE5nVe4.js
backend/: Dockerfile  package.json
backend/src/: server.ts
backend/src/middleware/: auth.ts  errors.ts
backend/src/routes/: accounts.ts  health.ts  settlements.ts
backend/src/services/: ai-client.ts  settlement.ts  solana-client.ts
contracts/: Anchor.toml  deploy.ps1  deploy.sh  install-prereqs.ps1
contracts/programs/treasury-vault/: Cargo.toml
contracts/programs/treasury-vault/src/: lib.rs
contracts/tests/: treasury-vault.ts
ml/: Dockerfile  requirements.txt
ml/src/: app.py  router.py
ml/tests/: test_router.py
treasury-visualizer/: README.md  index.html  package-lock.json  package.json  vite.config.js.timestamp-1776279691155-a7bf14136f7a9.mjs
treasury-visualizer/src/: App.jsx  index.css  main.jsx
treasury-visualizer/src/components/: Architecture.jsx  Dashboard.jsx  Financials.jsx  Hero.jsx  LiveDashboard.jsx  RoutingComparison.jsx  (+1 more)
(+5 files in other folders)
