[package]
name = "treasury-vault"
version = "0.1.0"
description = "Multi-sig treasury vault with timelocks for Treasury Agent"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
